# amplifier-youtube

./: .gitignore  README.md  bundle.md  pyproject.toml
.amplifier/digital-twin-universe/profiles/: youtube-validation.yaml
behaviors/: youtube-dl.yaml  youtube.yaml
context/: instructions.md
docs/superpowers/plans/: 2026-04-04-youtube-module-expansion.md
docs/superpowers/specs/: 2026-04-04-youtube-module-expansion-design.md
examples/: youtube-dl.md
modules/tool-youtube/: pyproject.toml
modules/tool-youtube/src/amplifier_module_tool_youtube/: core.py  search_tool.py
modules/tool-youtube/tests/: __init__.py  test_download_tool.py  test_feed_tool.py  test_mount.py  test_package.py  test_search_tool.py  test_transcript.py
src/amplifier_module_tool_youtube_dl/: __init__.py  youtube_tool.py
src/amplifier_youtube/: __init__.py  audio_utils.py  core.py  download_tool.py  feed_tool.py  search_tool.py  transcript.py
tests/: test_amplifier_youtube_package.py  test_download_tool.py  test_feed_tool.py  test_mount.py  test_search_tool.py  test_transcript.py  test_youtube_tool.py
