[project]
name = "amplifier-module-tool-youtube"
version = "0.2.0"
description = "YouTube capability module for Amplifier — download, search, and account feed access"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft Corporation" }]
dependencies = [
    "yt-dlp>=2024.0.0",
    "google-api-python-client>=2.0.0",
]

[project.entry-points."amplifier.modules"]
"tool-youtube" = "amplifier_module_tool_youtube:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_module_tool_youtube"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.12.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
